# task-manager

./: .gitignore  CMakeLists.txt  README.md  package.xml
dem/: test.tif
include/: CentroidSplitter.h  decco_utilities.h
include/task_manager/: CentroidSplitter.h  ConcavePolygon.h  Elevation2Ros.h  LawnmowerPattern.h  decco_utilities.h  drone_state_manager.h  elevation_manager.h  flight_controller_interface.h  hello_decco_manager.h  task_manager.h
launch/: task_manager.launch
launch/test/: tests_decco_utilities.launch  tests_drone_state.launch  tests_flight_controller_interface.launch  tests_hellodecco.launch  tests_takeoff.launch  tests_task_manager.launch
missions/: chumbo_dance.json  lawnmower.json  setpoint.json  trail_follow.json
src/: decco_utilities.cpp  drone_state_manager.cpp  elevation_manager.cpp  flight_controller_interface.cpp  hello_decco_manager.cpp  task_manager.cpp  task_manager_node.cpp
test/: decco_utilities_test.cpp  drone_state_manager_test.cpp  drone_takeoff_test.cpp  flight_controller_interface_test.cpp  hellodecco_test.cpp  task_manager_test.cpp  test_services.cpp
