<?xml version="1.0"?>
<package format="2">
  <name>task_manager</name>
  <version>1.0.0</version>
  <license>commercial</license>

  <description>Task manager handles which tasks and capabilities to start and when, based on UI connection and drone status.</description>

  <author email="erin@robotics88.com">Erin Linebarger</author>
  <maintainer email="erin@robotics88.com">Erin Linebarger</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>libmavconn</depend>
  <depend>livox_ros_driver2</depend>
  <depend>mavros</depend>
  <depend>messages_88</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
